[package]
name = "pjstore"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = [ "sqlite_pool" ] }
rusqlite = "0.14.0"
serde_json = "1.0.52"
structopt = "0.3.14"
